# smollerlm-for-macplus

./: CMakeLists.txt  README.md  example-configbuild.py  mkmodel.py  runsmol.c
